Minor readability fix